2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/olympus
	* libexif/pentax
	* libexif/canon: Correctly return names, titles and descriptions of
	  tages. Pointed out by Angela Wrobel.

2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: More guards against malloc returning NULL.
	  Problem spotted by Angela Wrobel.

2004-09-02  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: First part of a patch to be less strict on
	  the USER_COMMENT-tag. Submitted by Angela Wrobel, slightly adapted.

2004-09-01  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-tag.c: First ideas on how to support generation of
	  mandatory exif tags for a new image.

2004-09-01  Lutz Mueller <lutz@users.sourceforge.net>

	Suggestion by Angela Wrobel (http://www.wrobelnet.de/contact.html):

	* libexif/pentax:
	* libexif/olympus: Improve user experience by removing information
	  from the output that was only intended for developers.

2004-08-31  Lutz Mueller <lutz@users.sourceforge.net>

	* test/test-mem.c: Plug some memory leaks. Suggested by Angela Wrobel
	  (http://www.wrobelnet.de/contact.html).

2004-08-27  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: 0.6.10 -> 0.6.11, as libexif-0.6.10 has just been
	  released.

2004-08-26  Lutz Mueller <lutz@users.sourceforge.net>

	Achim Bohnet found a spelling mistake:

	* libexif/exif-tag.c: 'colums' -> 'columns'

2004-08-26  Lutz Mueller <lutz@users.sourceforge.net>

	Suggestions from Angela Wrobel (http://www.wrobelnet.de/contact.html)

	* libexif/exif-entry.c
	* libexif/exif-loader.c
	* libexif/exif-utils.c
	* olympus/exif-mnote-data-olympus.c
	* pentax/exif-mnote-data-pentax.c: Check if malloc returned NULL.

2004-07-13  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-mnote-*.*: added exif_mnote_data_get_id()
	  returning actual mnote entry tag ID (suggested by Serge
	  Droz <serge.droz@psi.ch>)

2004-06-23  Serge Droz <serge.droz@psi.ch>
