@@ -1,6 +1,13 @@
 2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>
 
 	* libexif/olympus
+	* libexif/pentax: Fix typo and wrong logic introduced during my
+	  last changes. Thanks to Jan Patera
+	  <patera@pictview.com> for keeping an eye on me.
+
+2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* libexif/olympus
 	* libexif/pentax
 	* libexif/canon: Correctly return names, titles and descriptions of
 	  tages. Pointed out by Angela Wrobel.
